# hackaton

./: .env.template  README.md  pyproject.toml  task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb
blanks/: prompts.py
func/: methods_1.py  plan.py
logs/: my_console_task1.md  my_console_task2.md  my_console_task4.md  report_task_1.md  report_task_4.md
task3_files/: func.py  func_gigachat_fixed.py  sconfig.py
